terraform/examples/openshift/app/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onify-app
  labels:
    app: onify
    tier: app
spec:
  selector:
    matchLabels:
      app: onify
      tier: app
  template:
    metadata:
      labels:
        app: onify
        tier: app
    spec:
      imagePullSecrets:
      - name: onify-regcred
      containers:
      - name: app
        image: eu.gcr.io/onify-images/hub/app:latest # IMPORTANT: replace with desired version
        ports:
        - name: app
          containerPort: 3000
