terraform/examples/openshift/app/onify-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: onify-app
  labels:
    app: onify
    tier: app
spec:
  selector:
    app: onify
    tier: app
  ports:
    - protocol: TCP
      name: onify-app
      port: 443
      targetPort: 3000
    - name: onify-app2
      protocol: TCP
      port: 80
      targetPort: 3000
